# DanktronicsBot

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.js  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
src/: danktronics_bot.rs  helpers.rs  main.rs
src/model/: mod.rs
src/model/guild/: mod.rs
src/model/settings/: mod.rs
src/model/voice/: mod.rs
structures/: DankGuild.js  EmbedBuilder.js  Queue.js
