[package]
name = "danktronics_bot"
version = "0.2.1"
authors = ["Sei4or <sei4or@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "voice", "rustls_backend", "cache", "model"] }
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
anyhow = "1.0"
percent-encoding = "2.1.0"
byteorder = "1.3.4"
hound = "3.4.0"
lazy_static = "1.4.0"
regex = "1"
