[package]
name = "danktronics_bot"
version = "0.2.1"
authors = ["Sei4or"]
edition = "2018"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "voice", "rustls_backend", "cache", "model"] }
tokio = { version = "1.21.2", features = ["macros", "sync", "time", "rt-multi-thread"] }
songbird = { version = "0.3.2", features = ["gateway", "serenity-rustls"]}
anyhow = "1.0"
percent-encoding = "2.1.0"
byteorder = "1.3.4"
hound = "3.4.0"
lazy_static = "1.4.0"
regex = "1"
futures = "0.3.28"
